--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
-    "framer-motion": "^11.2.13",
+    "framer-motion": "^11.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "reduce-reducers": "^1.0.4",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.4",
     "web-vitals": "^2.1.4"
